load("@contrib_rules_jvm//java:defs.bzl", "java_test_suite", "java_library")
# gazelle:java_module_granularity module

java_library(
    name = "json-schema-provider",
    srcs = [
        "src/main/java/io/confluent/kafka/schemaregistry/json/JsonNodeComparator.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/JsonSchema.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/JsonSchemaComparator.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/JsonSchemaProvider.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/JsonSchemaUtils.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/SpecificationVersion.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/diff/ArraySchemaDiff.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/diff/CombinedSchemaDiff.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/diff/Context.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/diff/Difference.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/diff/EnumSchemaDiff.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/diff/NotSchemaDiff.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/diff/NumberSchemaDiff.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/diff/ObjectSchemaDiff.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/diff/SchemaDiff.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/diff/StringSchemaDiff.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/jackson/JSONArrayDeserializer.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/jackson/JSONArraySerializer.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/jackson/JSONBaseSerializer.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/jackson/JSONObjectDeserializer.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/jackson/JSONObjectSerializer.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/jackson/Jackson.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/jackson/JsonOrgModule.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/utils/Edge.java",
        "src/main/java/io/confluent/kafka/schemaregistry/json/utils/MaximumCardinalityMatch.java",
    ],
    visibility = ["//:__subpackages__"],
    exports = [
        "//client",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_github_erosb_everit_json_schema",
        "@maven//:org_json_json",
    ],
    deps = [
        "//client",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_guava",
        "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_jdk8",
        "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_joda",
        "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_jsr310",
        "@maven//:com_fasterxml_jackson_module_jackson_module_parameter_names",
        "@maven//:com_github_erosb_everit_json_schema",
        "@maven//:com_kjetland_mbknor_jackson_jsonschema_2_13",
        "@maven//:org_apache_commons_commons_compress",
        "@maven//:org_json_json",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_test_suite(
    name = "json-schema-provider-tests",
    srcs = [
        "src/test/java/io/confluent/kafka/schemaregistry/json/JsonSchemaTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/json/TestSchemaValidation.java",
        "src/test/java/io/confluent/kafka/schemaregistry/json/TestSchemas.java",
        "src/test/java/io/confluent/kafka/schemaregistry/json/diff/SchemaDiffTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/json/utils/MaximumCardinalityMatchTest.java",
    ],
    resources = glob(["src/test/resources/**/*"]),
    deps = [
        ":json-schema-provider",
        "//client",
        "//core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_github_erosb_everit_json_schema",
        "@maven//:com_google_guava_guava",
        "@maven//:com_squareup_okio_okio",
        "@maven//:com_squareup_okio_okio_jvm",
        "@maven//:junit_junit",
        "@maven//:org_hamcrest_hamcrest_core",
        "@maven//:org_json_json",
    ],
)
