package(default_visibility = ["//visibility:public"])

java_library(
    name = "main_dependencies",
    exports = [
        "//client:main_dependencies",
        "//json-schema-provider:main_dependencies",
        "//protobuf-provider:main_dependencies",
        "@io_confluent_assembly_plugin_boilerplate_resources//:unpacked",
        "@io_confluent_common_utils",
        "@org_apache_maven_maven_plugin_api",
        "@org_apache_maven_plugin_tools_maven_plugin_annotations"
    ],
    runtime_deps = [
        "//maven-plugin/src/main/resources:resources"
    ],
)
     


java_library(
    name = "tests_dependencies",
    testonly = 1,
    exports = [
        "//avro-serializer:main_dependencies",
        "//protobuf-serializer:main_dependencies",
        "@junit_junit",
        "main_dependencies"
    ],
    runtime_deps = [
        "@io_confluent_assembly_plugin_boilerplate_resources//:unpacked",
        "@org_apache_kafka_kafka_clients//:linkable"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
