load("@contrib_rules_jvm//java:defs.bzl", "java_test_suite", "java_library")
# gazelle:java_module_granularity module

java_library(
    name = "maven-plugin",
    srcs = [
        "src/main/java/io/confluent/kafka/schemaregistry/maven/CustomBasicComponentConfigurator.java",
        "src/main/java/io/confluent/kafka/schemaregistry/maven/DeriveSchemaMojo.java",
        "src/main/java/io/confluent/kafka/schemaregistry/maven/DownloadSchemaRegistryMojo.java",
        "src/main/java/io/confluent/kafka/schemaregistry/maven/FixedMapConverter.java",
        "src/main/java/io/confluent/kafka/schemaregistry/maven/Metadata.java",
        "src/main/java/io/confluent/kafka/schemaregistry/maven/MojoUtils.java",
        "src/main/java/io/confluent/kafka/schemaregistry/maven/Reference.java",
        "src/main/java/io/confluent/kafka/schemaregistry/maven/RegisterSchemaRegistryMojo.java",
        "src/main/java/io/confluent/kafka/schemaregistry/maven/Rule.java",
        "src/main/java/io/confluent/kafka/schemaregistry/maven/RuleSet.java",
        "src/main/java/io/confluent/kafka/schemaregistry/maven/SchemaRegistryMojo.java",
        "src/main/java/io/confluent/kafka/schemaregistry/maven/SetCompatibilityMojo.java",
        "src/main/java/io/confluent/kafka/schemaregistry/maven/TestCompatibilitySchemaRegistryMojo.java",
        "src/main/java/io/confluent/kafka/schemaregistry/maven/TestLocalCompatibilityMojo.java",
        "src/main/java/io/confluent/kafka/schemaregistry/maven/UploadSchemaRegistryMojo.java",
        "src/main/java/io/confluent/kafka/schemaregistry/maven/ValidateSchemaRegistryMojo.java",
        "src/main/java/io/confluent/kafka/schemaregistry/maven/derive/schema/DeriveAvroSchema.java",
        "src/main/java/io/confluent/kafka/schemaregistry/maven/derive/schema/DeriveJsonSchema.java",
        "src/main/java/io/confluent/kafka/schemaregistry/maven/derive/schema/DeriveProtobufSchema.java",
        "src/main/java/io/confluent/kafka/schemaregistry/maven/derive/schema/DeriveSchema.java",
        "src/main/java/io/confluent/kafka/schemaregistry/maven/derive/schema/DeriveSchemaUtils.java",
    ],
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//:__subpackages__"],
    exports = [
        "//client",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
    ],
    deps = [
        "//client",
        "//json-schema-provider",
        "//protobuf-provider",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_guava_guava",
        "@maven//:org_apache_kafka_kafka_clients",
        "@maven//:org_apache_maven_maven_plugin_api",
        "@maven//:org_apache_maven_plugin_tools_maven_plugin_annotations",
        "@maven//:org_codehaus_plexus_plexus_classworlds",
        "@maven//:org_eclipse_sisu_org_eclipse_sisu_inject",
        "@maven//:org_eclipse_sisu_org_eclipse_sisu_plexus",
    ],
)

java_library(
    name = "test-utils",
    srcs = [
        "src/test/java/io/confluent/kafka/schemaregistry/maven/SchemaRegistryTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/maven/derive/schema/DeriveJsonSchemaTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/maven/derive/schema/DeriveSchemaTest.java",
    ],
    deps = [
        ":maven-plugin",
        "//json-schema-provider",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:junit_junit",
    ],
)

java_test_suite(
    name = "maven-plugin-tests",
    srcs = [
        "src/test/java/io/confluent/kafka/schemaregistry/maven/DeriveSchemaMojoTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/maven/DownloadSchemaRegistryMojoTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/maven/RegisterSchemaRegistryMojoTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/maven/SchemasWithDependenciesTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/maven/SetCompatibilityMojoTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/maven/TestCompatibilitySchemaRegistryMojoTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/maven/TestLocalCompatibilityMojoTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/maven/ValidateSchemaRegistryMojoTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/maven/derive/schema/DeriveAvroSchemaTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/maven/derive/schema/DeriveJsonSchemaTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/maven/derive/schema/DeriveProtoBufSchemaTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/maven/derive/schema/DeriveSchemaUtilsTest.java",
    ],
    deps = [
        ":maven-plugin",
        ":test-utils",
        "//avro-serializer",
        "//client",
        "//core",
        "//json-schema-provider",
        "//protobuf-provider",
        "//protobuf-serializer",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_squareup_okio_okio",
        "@maven//:com_squareup_okio_okio_jvm",
        "@maven//:junit_junit",
        "@maven//:org_apache_avro_avro",
        "@maven//:org_apache_maven_maven_plugin_api",
        "@maven//:org_hamcrest_hamcrest_core",
    ],
)
