load("@rules_pkg//pkg:zip.bzl", "pkg_zip")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_filegroup", "pkg_files", "pkg_mkdirs", "strip_prefix")
load("//:runtime.bzl", "assemble_package", "java_lib_runtime_deps")

assemble_package(
    name = "schema-registry_package",
    deps_output_directory = "share/java/schema-registry",
    filesets_data = {
        "//:package_docs": "share/doc/schema-registry",
        "//:notices": "share/doc/schema-registry/notices",
        "//:licenses": "share/doc/schema-registry/licenses",
        "//bin:bin": "bin",
        "//:config": "etc/schema-registry",
    },
    deps = [
        "//client",
        "//core",
        "@maven//:io_confluent_logredactor",
    ],
)

assemble_package(
    name = "schema-registry_development",
    deps_output_directory = "schema_registry_development/share/java/schema-registry",
    deps = [
        "//client",
        "//core",
        "@maven//:io_confluent_logredactor",
    ],
)

assemble_package(
    name = "schema-registry_standalone",
    deps_output_directory = "schema_registry_standalone/share/java/schema-registry",
    filesets_data = {
        "//:package_docs": "share/doc/schema-registry",
        "//:notices": "share/doc/schema-registry/notices",
        "//:licenses": "share/doc/schema-registry/licenses",
        "//:config": "etc/schema-registry",
    },
    deps = [
        "//client",
        "//core",
        "@maven//:io_confluent_logredactor",
    ],
)
