load("@contrib_rules_jvm//java:defs.bzl", "java_test_suite", "java_library")
# gazelle:java_module_granularity module

java_library(
    name = "protobuf-serde",
    srcs = ["src/main/java/io/confluent/kafka/streams/serdes/protobuf/KafkaProtobufSerde.java"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//protobuf-serializer",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:org_apache_kafka_kafka_clients",
    ],
)

java_test_suite(
    name = "protobuf-serde-tests",
    srcs = ["src/test/java/io/confluent/kafka/streams/serde/protobuf/KafkaProtobufSerdeTest.java"],
    deps = [
        ":protobuf-serde",
        "//avro-serializer",
        "//core",
        "//protobuf-provider",
        "//schema-serializer",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_squareup_okio_okio",
        "@maven//:com_squareup_okio_okio_jvm",
        "@maven//:junit_junit",
        "@maven//:org_hamcrest_hamcrest_core",
    ],
)
