package(default_visibility = ["//visibility:public"])

java_library(
    name = "main_dependencies",
    exports = [
        "//client:main_dependencies",
        "//protobuf-provider:main_dependencies",
        "//protobuf-types:main_dependencies",
        "//schema-serializer:main_dependencies",
        "@com_google_protobuf_protobuf_java_util",
        "@io_confluent_assembly_plugin_boilerplate_resources//:unpacked",
        "@io_confluent_common_utils",
        "@org_apache_kafka_connect_api",
        "@org_apache_kafka_kafka_2_13"
    ],
)
     


java_library(
    name = "tests_dependencies",
    testonly = 1,
    exports = [
        "//core:main_dependencies",
        "@com_google_api_grpc_proto_google_common_protos",
        "@junit_junit",
        "@org_apache_kafka_kafka_2_13_test//:linkable",
        "@org_apache_kafka_kafka_clients_test//:linkable",
        "@org_mockito_mockito_core",
        "main_dependencies"
    ],
    runtime_deps = [
        "@io_confluent_assembly_plugin_boilerplate_resources//:unpacked",
        "@org_apache_kafka_connect_api//:linkable",
        "@org_apache_kafka_kafka_2_13//:linkable",
        "@org_apache_kafka_kafka_2_13_test//:linkable",
        "@org_apache_kafka_kafka_clients//:linkable",
        "@org_apache_kafka_kafka_clients_test//:linkable"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
