load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("@contrib_rules_jvm//java:defs.bzl", "java_test_suite")
# gazelle:java_module_granularity module

java_library(
    name = "protobuf-serializer",
    srcs = [
        "src/main/java/io/confluent/kafka/formatter/protobuf/ProtobufMessageFormatter.java",
        "src/main/java/io/confluent/kafka/formatter/protobuf/ProtobufMessageReader.java",
        "src/main/java/io/confluent/kafka/schemaregistry/protobuf/utils/MavenConfigGenerator.java",
        "src/main/java/io/confluent/kafka/serializers/protobuf/AbstractKafkaProtobufDeserializer.java",
        "src/main/java/io/confluent/kafka/serializers/protobuf/AbstractKafkaProtobufSerializer.java",
        "src/main/java/io/confluent/kafka/serializers/protobuf/KafkaProtobufDeserializer.java",
        "src/main/java/io/confluent/kafka/serializers/protobuf/KafkaProtobufDeserializerConfig.java",
        "src/main/java/io/confluent/kafka/serializers/protobuf/KafkaProtobufSerializer.java",
        "src/main/java/io/confluent/kafka/serializers/protobuf/KafkaProtobufSerializerConfig.java",
        "src/main/java/io/confluent/kafka/serializers/protobuf/ProtobufSchemaAndValue.java",
    ],
    visibility = ["//:__subpackages__"],
    exports = [
        "//protobuf-provider",
        "//schema-serializer",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:org_apache_kafka_kafka_clients",
    ],
    deps = [
        "//client",
        "//protobuf-provider",
        "//schema-serializer",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_protobuf_protobuf_java_util",
        "@maven//:com_squareup_wire_wire_schema_jvm",
        "@maven//:org_apache_kafka_kafka_clients",
    ],
)

java_binary(
    name = "MavenConfigGenerator",
    main_class = "io.confluent.kafka.schemaregistry.protobuf.utils.MavenConfigGenerator",
    visibility = ["//visibility:public"],
    runtime_deps = [":protobuf-serializer"],
)

java_library(
    name = "test-utils",
    srcs = [
        "src/test/java/com/acme/glup/CommonProto.java",
        "src/test/java/com/acme/glup/ExampleProtoAcme.java",
        "src/test/java/com/acme/glup/MetadataProto.java",
        "src/test/java/io/confluent/connect/protobuf/test/DescriptorRef.java",
        "src/test/java/io/confluent/kafka/formatter/protobuf/KafkaProtobufFormatterTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/protobuf/rest/RestApiSerializerTest.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/KafkaProtobufSerializerTest.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/CustomOptions.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/CustomOptions2.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/DateValueOuterClass.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/DecimalValueOuterClass.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/DecimalValuePb2OuterClass.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/DependencyTestProto.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/EnumReferenceOuter.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/EnumRootOuter.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/EnumUnionOuter.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/Int16ValueOuterClass.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/Int8ValueOuterClass.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/KeyTimestampValueOuterClass.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/NestedTestProto.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/PublicTestProto.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/Ranges.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/SInt32ValueOuterClass.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/SInt64ValueOuterClass.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/TestMessageOptionalProtos.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/TestMessageProtos.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/TimeOfDayValueOuterClass.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/TimestampValueOuterClass.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/UInt32ValueOuterClass.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":protobuf-serializer",
        "//avro-serializer",
        "//client",
        "//core",
        "//core:test-utils",
        "//protobuf-provider",
        "//schema-serializer",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_api_grpc_proto_google_common_protos",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:junit_junit",
        "@maven//:org_apache_kafka_kafka_clients",
    ],
)

java_test_suite(
    name = "protobuf-serializer-tests",
    srcs = [
        "src/test/java/com/acme/glup/CommonProto.java",
        "src/test/java/com/acme/glup/ExampleProtoAcme.java",
        "src/test/java/com/acme/glup/MetadataProto.java",
        "src/test/java/io/confluent/connect/protobuf/test/DescriptorRef.java",
        "src/test/java/io/confluent/kafka/formatter/protobuf/KafkaProtobufFormatterTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/protobuf/rest/RestApiSerializerTest.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/KafkaProtobufSerializerTest.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/CustomOptions.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/CustomOptions2.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/DateValueOuterClass.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/DecimalValueOuterClass.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/DecimalValuePb2OuterClass.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/DependencyTestProto.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/EnumReferenceOuter.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/EnumRootOuter.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/EnumUnionOuter.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/Int16ValueOuterClass.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/Int8ValueOuterClass.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/KeyTimestampValueOuterClass.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/NestedTestProto.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/PublicTestProto.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/Ranges.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/SInt32ValueOuterClass.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/SInt64ValueOuterClass.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/TestMessageOptionalProtos.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/TestMessageProtos.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/TimeOfDayValueOuterClass.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/TimestampValueOuterClass.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/UInt32ValueOuterClass.java",
    ],
    deps = [
        ":protobuf-serializer",
        "//avro-serializer",
        "//client",
        "//core",
        "//core:test-utils",
        "//protobuf-provider",
        "//schema-serializer",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_api_grpc_proto_google_common_protos",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:junit_junit",
        "@maven//:org_apache_kafka_kafka_clients",
    ],
)
